--- a/src/styles/WelcomeMessage.scss
+++ b/src/styles/WelcomeMessage.scss
@@ -24,3 +24,14 @@
     text-decoration: none;
   }
 }
+
+.welcome-message__container {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+
+  @media (max-width: 780px) {
+    display: contents;
+  }
+}
